--- a/slides/slides_introduction.Rmd
+++ b/slides/slides_introduction.Rmd
@@ -22,12 +22,12 @@ options(htmltools.dir.version = FALSE)
 
 - To Armel Lefebvre, Bianca Kramer, Cedric Thieulot, Erik van Sebille, Jeroen Bosman, Jeroen Ooms, Jonathan de Bruin, Lukas van de Wiel, Mateusz Kuzak, Menno Fraters, Philippe Delandmeter, and Renato Alves, for helping develop this workshop
 
-- To your teachers today!
+- To your teachers and helpers today!
 
 ---
 # Who are you? What brings you here?
 
-Present yourself in this collaborative document: [tinyurl.com/repcocollab](https://docs.google.com/document/d/1bYmI9jaOTQLNbt3umDMl-RvGs3nzz-_NmVSTGEc-6_Q/edit)
+Present yourself in this collaborative document: [tinyurl.com/repcodoc-2020-03-24](https://docs.google.com/document/d/1u0FmLR3kQfGW0Qpqbo4FZQJLhlEryKEPm7Fuinr3ZVk/edit?usp=sharing)
 
 - Your name
 - Your affiliation
@@ -39,6 +39,7 @@ Maybe add something about yourself:
 - Something exciting you discovered recently?
 - What book you're reading / show you're watching / music you're listening to ...
 - _or anything else!_
+
 
 ---
 # Be Reproducible!
