Adjusted to online for 2020-03-24

--- a/slides/slides_introduction.Rmd
+++ b/slides/slides_introduction.Rmd
@@ -24,6 +24,12 @@ options(htmltools.dir.version = FALSE)
 
 - To your teachers and helpers today!
 
+--
+
+### Please open the slides!
+You can find the slides at [tinyurl.com/repcopilot](https://utrechtuniversity.github.io/workshop-computational-reproducibility/). You may need links or code from these slides, so do open them.
+
+
 ---
 # Who are you? What brings you here?
 
@@ -40,6 +46,40 @@ Maybe add something about yourself:
 - What book you're reading / show you're watching / music you're listening to ...
 - _or anything else!_
 
+---
+# How to ask for help?
+
+#### What you can do:
+- Use the Zoom chat to ask questions (*preferred!*)
+- Put an X in the purple column of the status chart (page 2 of [tinyurl.com/repcodoc-2020-03-24](https://docs.google.com/document/d/1u0FmLR3kQfGW0Qpqbo4FZQJLhlEryKEPm7Fuinr3ZVk/edit?usp=sharing)) (*if you are stuck but don't know why*)
+
+#### What we will do:
+- Helpers will answer you in a public or private chat on Zoom
+- OR: helper posts a link to an individual google hangout, where they can assist you.
+
+---
+# General guidelines (and advice!)
+- Ask for help when you need it, and alert us when we need to slow down!
+
+--
+
+- Please mute yourself when you are not speaking (bottom right side of your Zoom window).
+
+--
+
+- We appreciate your video, but only share if you are comfortable.
+
+--
+
+- Use the green column of the status chart when you finished an exercise.
+
+--
+
+- Close as many unnecessary windows and programs as possible.
+
+--
+
+- Take a computer break when we take a break: a timer will show when we return!
 
 ---
 # Be Reproducible!
@@ -51,13 +91,13 @@ What is reproducibility?
 
 - Not the same as **replication**, where _different_ methods and _different_ data lead to the same research findings
 
-Why do you want to make your work reproducible?
+Why make your work reproducible?
 
-- for whom?
+- for other scientists building on your work.
 
-- what do they gain?
+- for colleagues using your tools.
 
-- what do you gain?
+- for yourself, in six months!
 ]
 
 --
@@ -66,7 +106,7 @@ Why do you want to make your work reproducible?
 ![futureself](https://imgs.xkcd.com/comics/future_self.png)
 ]
 ---
-# A great example
+# Making a start
 ![example](images/screenshots/badexample.png)
 
 ---
@@ -76,7 +116,7 @@ Why do you want to make your work reproducible?
 - Access to the data
 - (And let's assume we can replicate the enviroment)
 
-Do you feel confident about this project?
+How confident do you feel?
 --
 
 > This code is a kludgly, ugly, inefficient mess. 
@@ -94,19 +134,9 @@ We need to do more: we need to inspire trust.
 
 
 ---
-# What does a workflow look like?
-
-![ds-workflow](https://github.com/allisonhorst/stats-illustrations/raw/master/openscapes/environmental-data-science-r4ds-general.png)
-- data cleaning is an essential first step
-- think modular: each step requires own input, process, output
-
-.footnote[
-Illustration by [Allison Horst](https://github.com/allisonhorst/stats-illustrations)]
-
----
 # What will we do today?
 
-We will take you through a workflow (in a broader sense!)
+We will take you through a workflow (in a broad sense!)
 
 --
 
@@ -131,26 +161,15 @@ We will end by trying to reproduce each others' projects!
 
 - Our group today has many different abilities and experiences. We hope you will value this as much as we do!
 
-- Feel free and safe to share your expertise and experiences, either by helping your neighbor or by showing everyone.
+- Feel free and safe to share your expertise and experiences.
 
-- E.g.: if you do not know a certain word or term (or you think others may not know it): put it in the glossary, at [tinyurl.com/repcocollab](https://docs.google.com/document/d/1bYmI9jaOTQLNbt3umDMl-RvGs3nzz-_NmVSTGEc-6_Q/edit)
+- E.g.: if you do not know a certain word or term (or you think others may not know it): put it in the glossary; if you do: fill in the blanks!
 
 --
 
 #### Our objectives for you
 We want to teach you **good habits** that will make your work more accessible, trustworthy, and reproducible by others. In doing so, we have tried to identify those habits that are a **good return on investment**: meaning, they save you time in the not-so-long run.
 
+--
 
-
----
-# Let's get practical!
-
-- You can find the slides at [tinyurl.com/repcopilot](https://utrechtuniversity.github.io/workshop-computational-reproducibility/). You may need links or code from these slides, so do open them.
-
-- There's also a (tentative) schedule.
-
-- This is a workshop, so do follow along! Use your sticky notes to signal to us: 
-  - green means: I'm ready for the next step!
-  - pink means: I need assistance, please.
-  
-- If you are online: use the status chart in [tinyurl.com/repcocollab](https://docs.google.com/document/d/1bYmI9jaOTQLNbt3umDMl-RvGs3nzz-_NmVSTGEc-6_Q/edit) to indicate your progress!
+### And finally: we hope you enjoy the day!
